--- a/src/pages/Main/components/AboutMe/AboutMe.css
+++ b/src/pages/Main/components/AboutMe/AboutMe.css
@@ -49,17 +49,18 @@
 
 @media (max-width: 950px) {
     .about-me {
-        padding: 90px 50px;
+        padding: 93px 50px;
     }
     .about-me__container {
-        margin-bottom: 90px;
+        margin: 64px 0 90px;
     }
     .about-me__name {
         font-size: 40px;
+        letter-spacing: -1.6px;
     }
     .about-me__major {
         font-size: 12px;
-        margin: 16px 0 20px;
+        margin: 14px 0 21px;
     }
     .about-me__text {
         font-size: 12px;
@@ -73,7 +74,7 @@
 
 @media screen and (max-width: 600px) {
     .about-me {
-        padding: 70px 18px;
+        padding: 72px 14px;
     }
     .about-me__container {
         flex-direction: column;
@@ -92,7 +93,7 @@
     }
     .about-me__major {
         font-size: 11px;
-        margin: 20px 0;
+        margin: 22px 0;
     }
     .about-me__text {
         font-size: 11px;
