--- a/src/pages/Main/components/AboutProject/AboutProject.css
+++ b/src/pages/Main/components/AboutProject/AboutProject.css
@@ -72,7 +72,8 @@
         padding: 93px 50px;
     }
     .about-project__container {
-        margin-bottom: 93px;
+        margin-bottom: 94px;
+        gap: 30px;
     }
     .about-project__title {
         margin-bottom: 22px;
@@ -81,23 +82,30 @@
         font-size: 12px;
         line-height: 18px;
     }
+    .progress-bar__backend {
+        width: 21%;
+    }
+    .progress-bar__frontend {
+        width: 79%;
+    }
 }
 
 @media screen and (max-width: 600px) {
     .about-project {
-        padding: 70px 18px;
+        padding: 72px 18px;
     }
     .about-project__container {
         flex-direction: column;
-        margin: 60px 0;
-        gap: 56px;
+        margin: 61px 0;
+        gap: 58px;
     }
     .about-project__title {
         font-size: 18px;
-        margin-bottom: 16px;
+        margin-bottom: 17px;
     }
     .about-project__text {
         font-size: 11px;
+        line-height: 16px; 
     }
     .progress-bar__time {
         height: 35px;
@@ -106,5 +114,11 @@
     }
     .progress-bar__text {
         font-size: 11px;
+    }
+    .progress-bar__backend {
+        width: 35%;
+    }
+    .progress-bar__frontend {
+        width: 65%;
     }
 }
