--- a/src/pages/Main/components/Portfolio/Portfolio.css
+++ b/src/pages/Main/components/Portfolio/Portfolio.css
@@ -5,9 +5,14 @@
     margin: 0 0 57px;
 }
 
+@media screen and (max-width: 950px) {
+    .portfolio__title {
+        margin-bottom: 59px;
+    }
+}
 @media screen and (max-width: 600px) {
     .portfolio__title {
         font-size: 14px;
-        margin-bottom: 40px;
+        margin-bottom: 49px;
     }
 }
