--- a/src/pages/Main/components/Techs/Techs.css
+++ b/src/pages/Main/components/Techs/Techs.css
@@ -66,7 +66,7 @@
         margin-top: 83px;
     }
     .techs__item {
-        width: 83px;
+        width: 84px;
         height: 57px;
         font-size: 12px;
     }
@@ -74,14 +74,17 @@
 
 @media screen and (max-width: 600px) {
     .techs {
-        padding: 70px 18px;
+        padding: 69px 18px;
     }
     .techs__title {
         font-size: 30px;
-        margin: 60px 0 24px;
+        margin: 61px 0 24px;
+        letter-spacing: -1.2px;
     }
     .techs__text {
         font-size: 11px;
+        line-height: 16px;
+        letter-spacing: -0.44px;
     }
     .techs__list {
         margin: 50px auto 0;
@@ -93,6 +96,6 @@
 
 @media screen and (max-width: 400px) {
     .techs__list {
-        max-width: 176px;
+        max-width: 179px;
     }
 }
