--- a/src/pages/Movies/components/CustomCheckbox/CustomCheckbox.css
+++ b/src/pages/Movies/components/CustomCheckbox/CustomCheckbox.css
@@ -47,6 +47,9 @@
 }
 
 @media screen and (max-width: 600px) {
+    .custom-checkbox {
+        margin-top: 30px;
+    }
     .custom-checkbox__text {
         font-size: 11px;
     }
