--- a/src/pages/Movies/components/SearchForm/SearchForm.css
+++ b/src/pages/Movies/components/SearchForm/SearchForm.css
@@ -18,7 +18,7 @@
     height: 72px;
     display: flex;
     align-items: center;
-    padding: 0 10px 0 0;
+    padding: 0 8px 0 0;
     box-sizing: border-box;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .search-form__button {
-    width: 100px;
+    width: 108px;
     height: 52px;
     border-radius: 5px;
     border: none;
@@ -53,6 +53,18 @@
     padding-left: 25px;
 }
 
+@media screen and (max-width: 950px) {
+    .search-form__wrapper {
+        padding-bottom: 51px;
+    }
+    .search-form__label {
+        padding: 0 9px 0 0;
+    }
+    .search-form__button {
+        width: 114px;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .search-form {
         padding-inline: 14px;
@@ -61,11 +73,11 @@
         padding-bottom: 63px;
     }
     .search-form__label {
-        padding-right: 6px;
+        padding-right: 5px;
         height: 56px;
     }
     .search-form__button {
-        width: 80px;
+        width: 107px;
         height: 44px;
     }
     .search-form__input {
