--- a/src/pages/Profile/components/UserInfo/UserInfo.css
+++ b/src/pages/Profile/components/UserInfo/UserInfo.css
@@ -7,6 +7,11 @@
     margin-bottom: 17px;
 }
 
+.user-info:has(.user-info__input:focus) {
+    border-bottom: 1px solid #4285F4;
+    padding-bottom: 16px;
+}
+
 .user-info__text {
     font-size: 11px;
     font-weight: 500;
