--- a/src/components/AuthLayout/AuthLayout.css
+++ b/src/components/AuthLayout/AuthLayout.css
@@ -5,6 +5,7 @@
     padding: 70px 30px;
     margin: auto;
     display: flex;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -15,7 +16,7 @@
 .auth__title {
     font-size: 24px;
     font-weight: 500;
-    margin: 40px 0;
+    margin: 37px 0 41px;
 }
 
 .auth__footnote {
