--- a/src/pages/Movies/components/SearchForm/SearchForm.css
+++ b/src/pages/Movies/components/SearchForm/SearchForm.css
@@ -37,6 +37,11 @@
     font-weight: 500;
     font-family: 'inter', "Arial ", sans-serif;
     cursor: pointer;
+    transition: all 0.3s;
+}
+
+.search-form__button:hover {
+    opacity: 0.8;
 }
 
 .search-form__input {
