--- a/src/components/AuthLayout/AuthLayout.css
+++ b/src/components/AuthLayout/AuthLayout.css
@@ -36,6 +36,10 @@
     margin-left: 6px;
 }
 
+.auth__link:hover {
+    opacity: 0.7;
+}
+
 @media screen and (max-width: 460px) {
     .auth {
         padding: 56px 30px 30px;
