--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,6 +33,10 @@
     margin-right: auto;
 }
 
+.footer__link:hover {
+    opacity: 0.7;
+}
+
 @media (max-width: 600px) {
     .footer {
         padding-inline: 10px;
