--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,6 +24,10 @@
     font-size: 12px;
 }
 
+.header__link:hover {
+    opacity: 0.7;
+}
+
 .header__login {
     padding: 8px 20px;
     border-radius: 3px;
@@ -32,6 +36,10 @@
     font-weight: 500;
     color: #000;
     text-decoration: none;
+}
+
+.header__login:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 600px) {
