--- a/src/pages/Main/components/AboutMe/AboutMe.css
+++ b/src/pages/Main/components/AboutMe/AboutMe.css
@@ -45,6 +45,11 @@
     font-weight: 500;
     text-decoration-line: none;
     color: #FFF;
+    width: fit-content;
+}
+
+.about-me__github:hover {
+    opacity: 0.7;
 }
 
 @media (max-width: 950px) {
