--- a/src/pages/Main/components/ProjectLink/ProjectLink.css
+++ b/src/pages/Main/components/ProjectLink/ProjectLink.css
@@ -12,6 +12,10 @@
     border-bottom: 1px solid #424242;
 }
 
+.project-link:hover {
+    opacity: 0.7;
+}
+
 .project-link:last-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
