--- a/src/components/AuthLayout/AuthLayout.css
+++ b/src/components/AuthLayout/AuthLayout.css
@@ -9,6 +9,13 @@
     flex-direction: column;
 }
 
+.auth__section {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+}
+
 .auth__logo {
     width: fit-content;
 }
