--- a/src/components/MenuButton/MenuButton.css
+++ b/src/components/MenuButton/MenuButton.css
@@ -34,6 +34,10 @@
     .menu-button::before {
         bottom: 0;
     }
+    .menu-button:hover {
+        opacity: 0.8;
+        cursor: pointer;
+    }
 }
 
 @media screen and (max-width: 600px) {
