--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -28,6 +28,10 @@
     text-decoration-line: none;
 }
 
+.not-found__link:hover {
+    opacity: 0.7;
+}
+
 @media screen and (max-width: 600px) {
     .not-found__title {
         font-size: 80px;
