--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,17 +18,23 @@
     display: flex;
     align-items: center;
     border-top: 1px solid #424242;
-    padding-top: 20px;
+    padding: 20px 0 0;
     gap: 20px;
+    margin: 0;
+    list-style: none;
 }
 
 .footer__under-text {
-    color: #FFF;
     font-size: 13px;
     font-weight: 400;
     margin: 0;
+}
+
+.footer__link {
+    color: #FFF;
     text-decoration-line: none;
 }
+
 .footer__under-text:first-child{
     margin-right: auto;
 }
