--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,12 @@
     z-index: 10;
 }
 
+.header__nav {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
 .header__logo {
     margin-right: auto;
 }
@@ -38,7 +44,8 @@
     text-decoration: none;
 }
 
-.header__login:hover {
+.header__login:hover,
+.header__logo:hover {
     opacity: 0.8;
 }
 
