--- a/src/pages/Main/components/Portfolio/Portfolio.css
+++ b/src/pages/Main/components/Portfolio/Portfolio.css
@@ -5,6 +5,12 @@
     margin: 0 0 57px;
 }
 
+.portfolio__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 @media screen and (max-width: 950px) {
     .portfolio__title {
         margin-bottom: 59px;
