--- a/src/pages/Main/components/ProjectLink/ProjectLink.css
+++ b/src/pages/Main/components/ProjectLink/ProjectLink.css
@@ -1,4 +1,4 @@
-.project-link {
+.project-link__link {
     color: #FFF;
     font-size: 30px;
     font-weight: 400;
@@ -12,25 +12,25 @@
     border-bottom: 1px solid #424242;
 }
 
-.project-link:hover {
+.project-link__link:hover {
     opacity: 0.7;
 }
 
-.project-link:last-of-type {
+.project-link:last-of-type .project-link__link {
     padding-bottom: 0;
     margin-bottom: 0;
     border-bottom: none;
 }
 
 @media (max-width: 950px) {
-    .project-link {
+    .project-link__link {
         font-size: 28px;
         margin-bottom: 30px;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .project-link {
+    .project-link__link {
         font-size: 18px;
         letter-spacing: -0.72px;
         padding-bottom: 20px;
