--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -2,11 +2,18 @@
     flex: 1;
     padding: 148px 30px 70px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
     max-width: 410px;
     margin: 0 auto;
+}
+
+.profile__form,
+.profile__section {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .profile__title {
