--- a/src/components/AuthLayout/AuthLayout.css
+++ b/src/components/AuthLayout/AuthLayout.css
@@ -19,6 +19,9 @@
 .auth__logo {
     width: fit-content;
 }
+.auth__logo:hover {
+    opacity: 0.8;
+}
 
 .auth__title {
     font-size: 24px;
@@ -51,6 +54,9 @@
     .auth {
         padding: 56px 30px 30px;
         box-sizing: border-box;
+        align-items: center;
+    }
+    .auth__section {
         align-items: center;
     }
     .auth__title {
