--- a/src/components/SubmitButton/SubmitButton.css
+++ b/src/components/SubmitButton/SubmitButton.css
@@ -10,9 +10,40 @@
     border: none;
     cursor: pointer;
     transition: opacity 0.2s ease;
+    position: relative;
+}
+
+.submit-button_loading {
+    color: transparent;
+}
+
+.submit-button_loading:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    border: solid 2px;
+    border-color: #fff transparent transparent transparent;
+    border-radius: 100%;
+    transition: .3s ease;
+    animation: spin 1s infinite;
+    transform-origin: 0 0;
 }
 
 .submit-button:hover {
     cursor: pointer;
     opacity: 0.8;
+}
+
+.submit-button_loading:hover {
+    cursor: wait;
+    opacity: 1;
+}
+
+@keyframes spin {
+    from { transform: rotate(0) translate(-50%, -50%) }
+    to { transform: rotate(360deg) translate(-50%, -50%) }
 }
