--- a/src/pages/Movies/components/MoviesList/MoviesList.css
+++ b/src/pages/Movies/components/MoviesList/MoviesList.css
@@ -7,6 +7,7 @@
 }
 
 .movies-list__list {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 319px;
@@ -34,7 +35,7 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1000px) {
     .movies-list__list {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 309px;
@@ -43,7 +44,7 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 675px) {
     .movies-list {
         padding: 52px 10px 80px;
     }
