--- a/src/pages/Movies/components/SearchForm/SearchForm.css
+++ b/src/pages/Movies/components/SearchForm/SearchForm.css
@@ -9,6 +9,11 @@
 .search-form__wrapper {
     border-bottom: 1px solid rgba(170, 170, 170, 0.2);
     padding-bottom: 43px;
+    position: relative;
+}
+
+.search-form__wrapper:has(.search-form__error) {
+    border-color:  #EE3465;
 }
 
 .search-form__label {
@@ -38,10 +43,46 @@
     font-family: 'inter', "Arial ", sans-serif;
     cursor: pointer;
     transition: all 0.3s;
+    position: relative;
 }
 
 .search-form__button:hover {
     opacity: 0.8;
+}
+
+.search-form__button_disabled {
+    background-color: #8B8B8B;
+    opacity: 0.5;
+}
+
+.search-form__button_disabled:hover {
+    opacity: 0.5;
+    cursor: default;
+}
+
+.search-form__button_loading {
+    color: transparent;
+}
+
+.search-form__button_loading:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    border: solid 2px;
+    border-color: #fff transparent transparent transparent;
+    border-radius: 100%;
+    transition: .3s ease;
+    animation: spin 1s infinite;
+    transform-origin: 0 0;
+}
+
+.search-form__button_loading:hover {
+    cursor: wait;
+    opacity: 1;
 }
 
 .search-form__input {
@@ -55,7 +96,14 @@
     font-size: 18px;
     font-weight: 400;
     color: #FFF;
-    padding-left: 25px;
+    padding-inline: 25px 10px;
+}
+
+.search-form__error {
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    color: #EE3465;
 }
 
 @media screen and (max-width: 950px) {
@@ -89,4 +137,9 @@
         font-size: 16px;
         padding-left: 12px;
     }
+}
+
+@keyframes spin {
+    from { transform: rotate(0) translate(-50%, -50%) }
+    to { transform: rotate(360deg) translate(-50%, -50%) }
 }
