--- a/src/pages/Movies/components/MoviesCard/MoviesCard.css
+++ b/src/pages/Movies/components/MoviesCard/MoviesCard.css
@@ -4,6 +4,13 @@
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
 }
 
+.movies-card__link {
+    height: 100%;
+    display: block;
+    text-decoration: none;
+    color: #FFF;
+}
+
 .movies-card__info {
     display: flex;
     align-items: center;
