--- a/src/pages/Movies/components/MoviesCard/MoviesCard.css
+++ b/src/pages/Movies/components/MoviesCard/MoviesCard.css
@@ -88,6 +88,32 @@
     content: '✕';
 }
 
+.movies-card__button_loading {
+    color: transparent;
+    background-color: #313131;
+}
+
+.movies-card__button_loading:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    border: solid 2px;
+    border-color: #fff transparent transparent transparent;
+    border-radius: 100%;
+    transition: .3s ease;
+    animation: spin 1s infinite;
+    transform-origin: 0 0;
+}
+
+.movies-card__button_loading:hover {
+    cursor: wait;
+    opacity: 1;
+}
+
 @media screen and (max-width: 850px) {
     .movies-card__image {
         height: 190px;
@@ -109,4 +135,9 @@
     .movies-card__button {
         margin: 14px auto;
     }
+}
+
+@keyframes spin {
+    from { transform: rotate(0) translate(-50%, -50%) }
+    to { transform: rotate(360deg) translate(-50%, -50%) }
 }
